# powerbi-streamlit

./: .gitignore  Dockerfile  app.py  main.py  pkg_version.py  pyproject.toml  requirements.txt  version.txt
src/: config.py  report_metadata.json
src/agent/: agent.py  main.py  test.ipynb  test1.ipynb
src/api/: main.py  schema.py
src/api/routes/: comparison.py  deletion.py  health.py  migration.py  recommend.py
src/tools/: auth.py  delete_pbix.py  export_pbix.py  recommended_dashboard.py  upload_pbix.py  workspace.py  workspace_comparison.py
